--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 script:
   - black --check .
   - flake8 .
-  - coverage run --source=mysite_swe1_app,polls manage.py test
+  - coverage run --source=djangopoll,polls manage.py test
 
 after_script:
   - 
