--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ deploy:
     secure: "v*1ns$8^s8isxj$-7c=f4%91gy3964s9sc%&90zb+6+wpiah*8"
   region: "us-west-2"
   app: "djangopoll"
-  env: "e-fau2vk9aiw"
+  env: "django-env"
   bucket_name: "the-target-S3-bucket"
+  on:
+    repo: "wuyasan/swe1-app"
+    branch: "main"
   
