--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,8 @@ after_script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: "AKIA5FTY6LQERFDC2IPM"
-  secret_access_key:
-    secure: "v*1ns$8^s8isxj$-7c=f4%91gy3964s9sc%&90zb+6+wpiah*8"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
   region: "us-west-2"
   app: "djangopoll"
   env: "django-env"
