--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ deploy:
   access_key_id: $AWSAccessKeyID
   secret_access_key: $AWSSecretKey
   region: "us-west-2"
-  app: "djangoPolls"
-  env: "djangoPolls"
+  app: "django-Polls"
+  env: "django-Polls"
   bucket_name: "elasticbeanstalk-us-west-2-905418005513"
   on:
     repo: "wuyasan/swe1-app"
