--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   access_key_id: $AWSAccessKeyID
   secret_access_key: $AWSSecretKey
   region: "us-west-2"
-  app: "django-polls"
+  app: "djangoPolls"
   env: "django-poll"
   bucket_name: "elasticbeanstalk-us-west-2-905418005513"
   on:
