--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 dist: focal
 
 python:
-  - 3.10
+  - 3.7
 
 env:
   - DJANGO=5.0.2
@@ -28,8 +28,8 @@ deploy:
   access_key_id: $AWSAccessKeyID
   secret_access_key: $AWSSecretKey
   region: "us-west-2"
-  app: "djangoPolls"
-  env: "django-poll"
+  app: "swe1-app"
+  env: "swe1-app-env"
   bucket_name: "elasticbeanstalk-us-west-2-905418005513"
   on:
     repo: "wuyasan/swe1-app"
